story mode for PhotoTable. also some cleanup and refactoring also fix stuck alphas
Bug: 8399588
Change-Id: Id236b29701ede3696c8f1f0ccc6522eb8256ff25